--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "dev": "nodemon bin/www --ignore __tests__",
     "test": "jest"
   },
   "dependencies": {
