--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon bin/www --ignore __tests__",
-    "test": "jest"
+    "test": "jest",
+    "pretest": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
     "age-calculator": "^1.0.0",
@@ -18,6 +19,8 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-strongloop": "^2.1.0",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
