--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,13 @@
 {
     "parserOptions": {
-        "ecmaVersion": 2017
+        "ecmaVersion": 2020
     },
-
     "env": {
-        "es6": true
+        "es2020": true,
+        "jest": true
     },
-    "extends": "strongloop"
+    "extends": "strongloop",
+    "rules": {
+        "max-len": [2, 120, 8]
+    }
 }
