--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
         "es2020": true,
         "jest": true
     },
+    "ignorePatterns": ["jest.config.js", "e2e/", "karma.conf.js"],
     "extends": "strongloop",
     "rules": {
         "max-len": [2, 120, 8]
