--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "localized-strings": "^0.2.4",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
     "rxjs": "~6.5.4",
